# our_places_rs

./: .gitignore  .tmuxinator.yml  Cargo.toml  Dockerfile  Dockerfile.booking_api  Dockerfile.image_worker  Dockerfile.listing_api  Dockerfile.user_api  Makefile  Makefile.toml  README.md  audit.toml  compiler_error.txt  compiler_error_v2.txt  development_context.md  docker-compose.db.yml  docker-compose.yml  error_log.txt  gemini.md  openapi-prod.yaml  openapi.yaml
admin_api/: Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md
app_api/: Cargo.toml  Dockerfile  Dockerfile-cloud-sql-proxy  Dockerfile-db  Dockerfile-dev  Makefile  Makefile.toml  README.md  development_context.md  log4rs.yml  openapi.yaml  service.yaml
app_api/api_core/: Cargo.toml
app_api/booking_api/: Cargo.toml  Makefile.toml
app_api/config/: Default.toml
app_api/image_worker/: Cargo.toml
app_api/listing_api/: .env  Cargo.toml  Makefile.toml  cors.json
app_api/migrations/: 20240505074611_create_tables.sql
app_api/oauth_config_util/: our-places-dev-sa-our-places-oauth.json
app_api/scripts/: init_db.sh
app_api/src/: lib.rs  main.rs  settings.rs  startup.rs
app_api/tests/: README.md  app_test.rs  common.rs  config_test.rs  health_check.rs  listing_test.rs
app_api/user_api/: Cargo.toml  Makefile.toml
common/: Cargo.toml
common/src/: auth.rs  gcs.rs  geocode.rs  http_client.rs  lib.rs  models.rs  reference.rs
db_core/: Cargo.toml  Makefile.toml
db_core/.sqlx/: query-08acb208bdd67cee85f40164cce0d4e8bee2ace211890a0f885684438c0b3c22.json  query-10b628500d8e08114936f08dffc95bf1b918c8da10512d54ef203c2457f37410.json  query-15a7d01396282eca0c076ab5e985d338dbd00e62eb188ed9863d595807e0c99c.json  query-190b0bea4d2a2840b213bc89efcf0e9d2ab43d498168a4d440d0a78c1ed68ada.json  query-3126ea61affad0554134a2c853df52ca1de0e1fe6016e732943b3b591de57f2b.json  query-33a4b9b707ee962f8561629fb27482c2290e6b5a775e58c5c18266f2152317af.json  query-487418951d279d05da13929ca6f4c220da1806b24efb1a0c65aefbb115501143.json  query-4e0b1a7f0a93c4046520db32d0fabca32ec60dec3e3bb6ab6b0f53025f00d22a.json  query-5114d476e5b14dc39e0094c8896faedabf0b3ae24ca0256f75854e098715f256.json  query-541f62eefce0b8c4db736534ccae38fb3760fe037dfc762e0d5431e70b9ef34d.json  query-5ce09929f9038d8f5eba0906e82998c99895007c82d0ba89c18e6d7a20d4df22.json  query-614eb36f4ef56700afa9d495268d5cbb2dd71c3e093dbab52a2cdb3077d580e9.json  query-650b98296f5fcd00916e065ab3148fa654d40cd6e5218a2780cb0e54f8843db8.json  query-72eba57bdbc3061d8188b8415d240de807b74d14fa302c2c1b6baba4b90e0646.json  query-80ac1c569861358a8a90bad185d7e3af202dd37876f734dd79840a72f52b5ccb.json  query-87b09537267ef4c07bedd9044410a1fddc1680896f6b091985516da0cda67b58.json  query-a16b5c8a3e6a9c5c719821f97feae45a0433e12a38dd7d3808b802be3d22c0db.json  query-ab29b7dfd93e54e4c83fd0c2cdaeed36168f879eb13a9d9386aa7968c8d6a69f.json  query-acc81c1ff4fd17c70df71104dbd50b04fd0132681ed764ca7d38136bb00cdb57.json  query-af5f7d52c09ab7009a2581c66bac720978e0c0641ddaa7675e76f3dfb8737ff6.json  query-bf919d73af1e236ed62f5e7d6190259974d073db28ff2540279316a6a56f5776.json  query-c0c4c4eb2e1b32e8658130b435f259a9a94d392608c770d53ad86c02fe9703fb.json  query-c3327f8f3022e56533a31443986c18fc99daf7658e1b574d6641ad54dec4b1ac.json  query-c552c9fe175b594e9aad45eed9d92c319825c3ca2a394829d1c5b4bd348718be.json  query-c8932df262440f26960a3bd08e99dce8d048e879b914bcfd1e2bcc665ef99a1b.json  query-c9d40fbe4e3a193ee76ad4a22f50089391817bb4383642fe6c5d1562e57eeed9.json  query-d208faa09aa9e89e479b369080048956ad9db5f0764c38a768817031406c9c57.json  query-d22d841cf7374cdd4ef6424801f543ffba42e679aad098d937b97f6841cfdb24.json  query-d6c75bd6111e63d31090bce91b9f9fa2970f67392cecd45d6009f144d42369cb.json  query-e301d01e84ab7ab6e8263b12145d17950a308fe63b1085207c1acd5d5378dba1.json  query-ea0977e1f4004c8ded68cf8c765f55be31b2bdee9dd558bcc762507fbd0d3e76.json  query-ea7563c47f6cbe269136ce70d4be346a669bb4ecf219b799ac8bf0cd0011c8df.json  query-eb2a1f07129cf306733dc6cd45e7baf067dbe43f8e2bd2ad7329176287a631a1.json  query-f52b8631b94c9b111f7a7cf87dd91d940d4296909f63ee2646f89a338dd90a44.json
db_core/migrations/: 20240505074611_create_tables.sql  20251129060949_create_listing_history_table.sql  20251206000000_add_deleted_at_to_listing.sql  20251207043946_create_user_table.sql  20251207044017_create_booking_table.sql  20251208000000_create_user_history.sql  20251213000000_add_user_id_to_listing.sql  20251228000000_remove_listing_history_name_constraint.sql  20260128000000_create_sessions_table.sql  20260129025347_add_user_attributes.sql  20260129025348_add_user_history_attributes.sql  20260203021617_refactor_user_profiles.sql  20260223033433_create_listing_image_table.sql  20260318000000_add_image_resolutions.sql  20260321000000_add_is_primary_to_listing_image.sql  20260402052944_add_metadata_to_booking_and_discounts_to_listing.sql  20260406052700_20260406000000-add-listing-slug.sql  20260406120847_20260406070800-additional-listing-props.sql  20260406183814_20260406070900-addl-listing-props-for-history.sql  20260407121453_20260407071400-add-listing-city.sql  20260408051402_20260408001200-currency-exchange-rates.sql  20260412000000_add_user_verification.sql  20260412081500_add_stay_requirements_to_listing.sql  20260412140000_create_booking_history.sql  20260413000000_fix_public_schema_mismatch.sql
db_core/src/: booking.rs  connection.rs  error.rs  lib.rs  listing.rs  models.rs  sessions.rs  user.rs
docs/listing_api/: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-db  Dockerfile-dev  Makefile.toml  README.md  build  build.rs  log4rs.yml  openapi.yaml
web_app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.web_app  Makefile  README.md  build.rs  development_context.md  docker-compose.yml  index.html  package-lock.json  package.json  pubspec.yaml
web_app/app/: default-tags.tsx  head.tsx  layout.tsx  output.css  page.tsx
web_app/linux/: CMakeLists.txt
web_app/src/: api.rs  api_client.rs  app.rs  auth.rs  lib.rs  main.rs  models.rs
web_app/style/: output.css  tailwind.css
web_app_common/: Cargo.toml
(+220 files in other folders)
