[workspace]
members = [
    "app_api/api_core",
    "app_api/booking_api",
    "app_api/listing_api",
    "app_api/user_api",
    "common",
    "db_core",
    "protoproj",
    "web_app",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.61"
dotenvy = "0.15.7"
rust_decimal_macros = "1.35.0"
serde-xml-rs = "0.8.2"
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-actix-web = "0.7.19"

[workspace.dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[workspace.dependencies.config]
version = "0.15.19"
features = ["toml"]

[workspace.dependencies.rust_decimal]
version = "1.35.0"
features = ["serde", "serde-with-float"]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
]
default-features = false

[workspace.dependencies.tokio]
version = "1.37.0"

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["actix_extras", "decimal", "chrono", "uuid"]

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0.2"
features = ["actix-web"]

[workspace.dependencies.uuid]
version = "1.8"
features = ["v7", "serde"]

[workspace.dependencies.validator]
version = "0.20.0"
features = ["derive"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
