[workspace]
members = [
    "app_api/api_core",
    "app_api/booking_api",
    "app_api/listing_api",
    "app_api/user_api",
    "app_api/image_worker",
    "common",
    "db_core",
    "protoproj",
    "web_app",
    "web_app_admin",
    "web_app_common",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
rust_decimal_macros = "1.40.0"
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"

[workspace.dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[workspace.dependencies.config]
version = "0.15.22"
features = ["toml"]

[workspace.dependencies.rust_decimal]
version = "1.41.0"
features = ["serde", "serde-with-float"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
    "json",
]
default-features = false

[workspace.dependencies.tokio]
version = "1.51.0"

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["actix_extras", "decimal", "chrono", "uuid"]

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0.2"
features = ["actix-web"]

[workspace.dependencies.uuid]
version = "1.23.0"
features = ["v7", "serde"]

[workspace.dependencies.validator]
version = "0.20.0"
features = ["derive"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
