[workspace]
members = [
    "app_api/api_core",
    "app_api/booking_api",
    "app_api/listing_api",
    "app_api/user_api",
    "app_api/image_worker",
    "common",
    "db_core",
    "protoproj",
    "web_app",
    "web_app_admin",
    "web_app_common",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.13.0"
api_core = { path = "app_api/api_core" }
common = { path = "common" }
db_core = { path = "db_core" }
anyhow = "1.0.102"
dotenvy = "0.15.7"
rust_decimal_macros = "1.40.0"
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
leptos = "0.8.19"
leptos_meta = "0.8.6"
leptos_actix = "0.8.7"
leptos_router = "0.8.13"
wasm-bindgen = "0.2.118"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.13.2", features = ["json"] }
actix-files = "0.6.10"
http = "1.4.0"
web_app_common = { path = "web_app_common" }

[workspace.dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[workspace.dependencies.config]
version = "0.15.22"
features = ["toml"]

[workspace.dependencies.rust_decimal]
version = "1.41.0"
features = ["serde", "serde-with-float"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
    "json",
]
default-features = false

[workspace.dependencies.tokio]
version = "1.51.1"

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["actix_extras", "decimal", "chrono", "uuid"]

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0.2"
features = ["actix-web"]

[workspace.dependencies.uuid]
version = "1.23.0"
features = ["v7", "serde"]

[workspace.dependencies.validator]
version = "0.20.0"
features = ["derive"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
