[package]
name = "our-places-app-admin-api-rs"
version = "0.1.0"
edition = "2021"
publish = false
readme = "README.md"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
config = "0.13.2"
lazy_static = "1.4"
#function_name = "0.3.0"
#pretty_env_logger = "0.4.0"
#log = "0.4"
#log4rs = "1.1.1"

[[bin]]
name = "our-places-app-admin-api-rs"