[package]
name = "our-places-app-api-rs"
version = "0.1.0"
edition = "2021"
publish = false
readme = "README.md"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
config = "0.13.2"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.2.0"


[[bin]]
name = "our-places-app-api-rs"