[package]
name = "our-places-app-api-rs"
version = "0.1.0"
edition = "2024"
publish = false
readme = "README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0.140"
config = "0.15.0"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
rust_decimal = "1.37.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = "0.4.40"
strum = "0.27.1"
strum_macros = "0.27.1"
#google_cloud_logging = "0.1.0"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "rust_decimal"
]

[dev-dependencies]
reqwest = "0.12.15"

[[bin]]
path = "src/main.rs"
name = "our-places-app-api-rs"
