[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v7", "js"] }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["serde-with-float"] }
utoipa = { workspace = true }
