[package]
name = "web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.10", features = ["csr"] }
tracing = { workspace = true }
log = "0.4"

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.70"
