[package]
name = "web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
console_log = "1.0"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.15", features = ["csr"] }
leptos_reactive = "0.6.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
common = { path = "../common" }
tracing = { workspace = true }
log = "0.4"

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.70"

[build-dependencies]
dotenvy = "0.15.7"
