[package]
name = "web_app_common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = { version = "0.6.10", optional = true }
actix-web = { version = "4.13.0", optional = true, features = ["macros"] }
leptos = { version = "0.8.10", features = ["nightly"] }
leptos_actix = { version = "0.8.6", optional = true }
leptos_router = { version = "0.8.8", features = ["nightly"] }
leptos_meta = { version = "0.8.5" }

reqwest = { version = "0.13.2", features = ["json"] }
serde.workspace = true
serde_json = "1.0.149"
rust_decimal.workspace = true

anyhow.workspace = true
common = { path = "../common" }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
