[package]
name = "web_app_common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true, features = ["macros"] }
leptos.workspace = true
leptos_actix = { workspace = true, optional = true }
leptos_router.workspace = true
leptos_meta.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true

anyhow.workspace = true
common.workspace = true

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
