[package]
name = "api_core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.0"
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_urlencoded = "0.7"
serde_json = { workspace = true }
serde-xml-rs = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }
config = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

db_core = { path = "../../db_core" }
common = { path = "../../common" }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "rust_decimal",
]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
