[package]
name = "api_core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web.workspace = true
actix-cors = "0.7.1"
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_urlencoded = "0.7.1"
serde_json = { workspace = true }
serde-xml-rs = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "registry",
  "env-filter",
  "json",
] }
config = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

db_core.workspace = true
common.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
