[package]
name = "image_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-actix-web = "0.7.21"
tracing-log = "0.2.0"

db_core = { path = "../../db_core" }
api_core = { path = "../api_core" }
common = { path = "../../common" }
actix-web = "4.13.0"
base64 = "0.22.1"
serde_json.workspace = true
uuid.workspace = true
sqlx.workspace = true
image = "0.25.10"
webp = "0.3.1"
google-cloud-storage = "1.9.0"
tokio-stream = "0.1.18"

rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
sqlx-db-tester = { version = "0.7.1", default-features = false, features = [
    "postgres",
] }
