[package]
name = "image_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-actix-web.workspace = true
tracing-log.workspace = true

db_core.workspace = true
api_core.workspace = true
common.workspace = true
actix-web.workspace = true
base64 = "0.22.1"
serde_json.workspace = true
uuid.workspace = true
sqlx.workspace = true
image = "0.25.10"
webp = "0.3.1"
google-cloud-storage = "1.9.0"
tokio-stream = "0.1.18"

rustls = { version = "0.23", features = ["ring"] }

[dev-dependencies]
sqlx-db-tester = { version = "0.7.1", default-features = false, features = [
    "postgres",
] }
