[package]
name = "user_api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
validator = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-actix-web.workspace = true
tracing-log.workspace = true
bcrypt = "0.19.0"

db_core.workspace = true
api_core.workspace = true
common.workspace = true
actix-web.workspace = true

[dev-dependencies]
sqlx-db-tester = { version = "0.7.1", default-features = false, features = [
    "postgres",
] }
