[package]
name = "our-places-app-api-listing-rs"
version = "0.1.0"
edition = "2024"
publish = false
readme = "README.md"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0.142"
config = "0.15.14"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
rust_decimal = "1.37.2"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
#google_cloud_logging = "0.1.0"
protoproj = { path = "../../protoproj" }


[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
]

[dev-dependencies]
reqwest = "0.12.23"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "rust_decimal",
] }
dotenv = "0.15"
rust_decimal_macros = "1"
url = "2.5.4"


[[bin]]
path = "src/main.rs"
name = "our-places-app-api-listing-rs"
